force-app/main/default/objects/Kinetic_Form__c/fields/Applicable_Standards_GPT__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Standards_GPT__c</fullName>
    <label>Applicable Standards (GPT)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>