force-app/main/default/objects/Kinetic_Form__c/fields/Assistant__c.field-meta.xml
<CustomField>
    <fullName>Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assistant</label>
    <referenceTo>Assistant__c</referenceTo>
    <relationshipLabel>Prompt Templates</relationshipLabel>
    <relationshipName>Prompt_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>