force-app/main/default/objects/Kinetic_Form__c/fields/Chat_GPT_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Chat_GPT_Parameters__c</fullName>
    <description>Chat GPT parameters used to retrieve the template metadata and get summary and recommendations</description>
    <inlineHelpText>Chat GPT parameters used to retrieve the template metadata and get summary and recommendations</inlineHelpText>
    <label>Chat GPT Parameters</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>