force-app/main/default/objects/Kinetic_Form__c/fields/Email_Notification_Controller__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification_Controller__c</fullName>
    <label>Email Notification Controller</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send it no matter how</fullName>
            </value>
            <value>
                <fullName>Overall score</fullName>
            </value>
            <value>
                <fullName>Answer from a question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>