force-app/main/default/objects/Kinetic_Form__c/fields/Follow_up_Inspection_ID__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Inspection_ID__c</fullName>
    <description>Id of the inspection form record</description>
    <inlineHelpText>Id of the inspection form record</inlineHelpText>
    <label>Follow-up Inspection ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>