force-app/main/default/objects/Kinetic_Form__c/fields/Inspection_Objective_GPT__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Objective_GPT__c</fullName>
    <label>Inspection Objective (GPT)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>