force-app/main/default/objects/Kinetic_Form__c/fields/Is_Checklist_Needed_GPT__c.field-meta.xml
<CustomField>
    <fullName>Is_Checklist_Needed_GPT__c</fullName>
    <description>Is a checklist needed from ChatGPT</description>
    <inlineHelpText>Is a checklist needed from ChatGPT</inlineHelpText>
    <label>Is Checklist Needed (GPT)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>