force-app/main/default/objects/Kinetic_Form__c/fields/Number_Of_Questions__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Questions__c</fullName>
    <label>Number Of Questions</label>
    <summaryForeignKey>Kinetic_Form_Question__c.Kinetic_Form__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>