force-app/main/default/objects/Kinetic_Form__c/fields/Number_Of_Questions_From_JSON__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Questions_From_JSON__c</fullName>
    <label>Number Of Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>