force-app/main/default/objects/Kinetic_Form__c/fields/Questions_By_Page_No__c.field-meta.xml
<CustomField>
    <fullName>Questions_By_Page_No__c</fullName>
    <description>Used to hold JSON of Question Index by Page Number</description>
    <inlineHelpText>Used to hold JSON of Question Index by Page Number</inlineHelpText>
    <label>Questions By Page No</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>