force-app/main/default/objects/Kinetic_Form__c/fields/Section_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Section_Metadata__c</fullName>
    <label>Section Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>