force-app/main/default/objects/Kinetic_Form__c/fields/Spreadsheet_Template__c.field-meta.xml
<CustomField>
    <fullName>Spreadsheet_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spreadsheet Template</label>
    <referenceTo>Spreadsheet_Configuration__c</referenceTo>
    <relationshipLabel>Form Templates</relationshipLabel>
    <relationshipName>Form_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>