force-app/main/default/objects/Kinetic_Form__c/fields/Template_Collection__c.field-meta.xml
<CustomField>
    <fullName>Template_Collection__c</fullName>
    <label>Template Collection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAI Communications</fullName>
            </value>
            <value>
                <fullName>Generic Demo</fullName>
            </value>
            <value>
                <fullName>Metro South Health</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>