force-app/main/default/objects/Kinetic_Form__c/fields/Template_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Template_Metadata__c</fullName>
    <description>Template Metadata including template details and question list with section and page list</description>
    <inlineHelpText>Template Metadata including template details and question list with section and page list</inlineHelpText>
    <label>Template Metadata</label>
    <length>98304</length>
    <type>LongTextArea</type>
</CustomField>