force-app/main/default/objects/Kinetic_Form__c/fields/User_Role_GPT__c.field-meta.xml
<CustomField>
    <fullName>User_Role_GPT__c</fullName>
    <label>User Role (GPT)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>