force-app/main/default/objects/Kinetic_Form__c/listViews/BAI_Templates.listView-meta.xml
<ListView>
    <fullName>BAI_Templates</fullName>
    <columns>NAME</columns>
    <columns>Number_Of_Questions__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>BAI</value>
    </filters>
    <label>BAI Templates</label>
</ListView>