force-app/main/default/objects/Kinetic_Form__c/listViews/Consumer_Goods_Templates.listView-meta.xml
<ListView>
    <fullName>Consumer_Goods_Templates</fullName>
    <columns>NAME</columns>
    <columns>Applicable_Standards_GPT__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Number_Of_Questions_From_JSON__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>CG</value>
    </filters>
    <label>Consumer Goods Templates</label>
</ListView>