force-app/main/default/objects/Kinetic_Form__c/listViews/MHC_Templates.listView-meta.xml
<ListView>
    <fullName>MHC_Templates</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>MHC</value>
    </filters>
    <label>MHC Templates</label>
</ListView>