force-app/main/default/objects/Kinetic_Form__c/listViews/RCL_Templates.listView-meta.xml
<ListView>
    <fullName>RCL_Templates</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>RCL,OSA</value>
    </filters>
    <label>RCL Templates</label>
</ListView>