force-app/main/default/objects/Kinetic_Form__c/listViews/Safety_Templates.listView-meta.xml
<ListView>
    <fullName>Safety_Templates</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>safe</value>
    </filters>
    <label>Safety Templates (FY23)</label>
</ListView>